[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/examples/fps/ui/PauseMenu.gd" id="1_pause_menu_script"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_pause_menu_script")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="LeaveMatchButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Leave Match"

[node name="QuitGameButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"